--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-appdirs
-bsdiff4
-coverage
-ed25519
-flask
-nose
-psutil
+appdirs==1.4.3
+coverage==4.5.3
+Flask==1.0.2
+nose==1.3.7
+psutil==5.6.2
 PyInstaller==3.1
-pyupdater
+dsdev-utils==0.9.2
+pyupdater==2.2.0
 requests==2.4.3 # https://github.com/kennethreitz/requests/issues/2465
 setuptools==19.2 # https://github.com/pyinstaller/pyinstaller/issues/1781
+wxPython==4.0.4
